--- a/circle.html
+++ b/circle.html
@@ -8,6 +8,9 @@
 	<h1>How to create a circle using a div</h1>
 	<div class="blue circle">
 		
-	<div>
+	</div>
+	<div class="red circle">
+		
+	</div>
 </body> 
 </html>
